# to-mock-a-context-manager

./: pyproject.toml
test/: conftest.py  mocked_context_manager_test.py  ordinary_context_manager_test.py
