[tool.poetry]
name = "to-mock-a-context-manager"
version = "0.1.0"
description = ""
authors = ["jonghyouk yun <ageldama@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
